reading from 27th and taking whole 24hrs

--- a/mlp_regression_approach.ipynb
+++ b/mlp_regression_approach.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
     "import numpy as np; np.set_printoptions(threshold=sys.maxsize)\n",
     "\n",
     "DUD_VALUE= 123\n",
-    "TOTAL_ROWS= 2228278\n",
+    "TOTAL_ROWS= 2228278 # This number is greater than the total amount of rows circa epoch change to 27th, but it still works\n",
     "INPUT_ROWS_LIMIT= TOTAL_ROWS # TOTAL_ROWS\n",
     "FILENAME= 'dublinbikes_2020_Q1.csv'\n",
     "MAX_STATION_ID= 117\n",
@@ -21,15 +21,15 @@
     "DATAPOINTS_PER_DAY= 288\n",
     "DATAPOINTS_PER_HOUR= 12\n",
     "DAYS_OF_WEEK= ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday'] # yes, I consider Monday to be the '0'/start of the week\n",
-    "STARTING_DAY= 2\n",
+    "STARTING_DAY= 0 # aka Monday. Because the 27th of Jan 2020 is a Monday\n",
     "MISSING_STATIONS= [117, 116, 70, 60, 46, 35, 20, 14, 1]\n",
-    "TOTAL_DAYS= 91\n",
-    "OPEN_HOURS= 20 # want to change this to 18 i.e. excluding 1, 2, 3, and 4 am\n",
+    "TOTAL_DAYS= 66 # from 27 / 1 / 2020 to (and including) 1 / 4 / 2020\n",
+    "HOURS= 24\n",
     "MAX_DISPLAYED_STATIONS= 1\n",
     "MAX_DISPLAYED_DAYS= 10\n",
-    "MAX_TIME= int((datetime.datetime(2020,4,2,0,0) - datetime.datetime(2020,1,1,0,0)).total_seconds() / SECS_IN_5MIN)\n",
-    "START_TIME= int((datetime.datetime(2020, 1, 1, 4, 0) - datetime.datetime(2020, 1, 1, 0, 0)).total_seconds() / SECS_IN_5MIN) # bike sharing starts at 4am at earliest\n",
-    "MAX_MISSING_STATIONS= 10\n",
+    "EPOCH= datetime.datetime(2020, 1, 27, 0, 0)\n",
+    "MAX_TIME= int((datetime.datetime(2020,4,2,0,0) - EPOCH).total_seconds() / SECS_IN_5MIN)\n",
+    "DECREMENTS= 10\n",
     "\n",
     "class DataDay: # ideally this would be nested in the Station class\n",
     "    def __init__(self, index):\n",
@@ -37,7 +37,7 @@
     "        self.times_populated= 0\n",
     "        self.day_of_week= DUD_VALUE\n",
     "        self.day_since_epoch= DUD_VALUE\n",
-    "        self.day_of_week= ((STARTING_DAY - 1 + index) % len(DAYS_OF_WEEK))\n",
+    "        self.day_of_week= ((STARTING_DAY + index - 1) % len(DAYS_OF_WEEK))\n",
     "        \n",
     "        self.daily_epoch_time= np.full(DATAPOINTS_PER_DAY, DUD_VALUE, dtype=np.int)\n",
     "        self.epoch_time= np.full(DATAPOINTS_PER_DAY, DUD_VALUE, dtype=np.int)\n",
@@ -59,7 +59,7 @@
     "        self.address= DUD_VALUE\n",
     "        self.latitude= DUD_VALUE\n",
     "        self.longitude= DUD_VALUE\n",
-    "        self.data_days= [DataDay(i) for i in range(1, TOTAL_DAYS + 3)] # Admitedly, I don't even know exactly why this has to be +3\n",
+    "        self.data_days= [DataDay(i) for i in range(1, TOTAL_DAYS + 2)] # + 1 because 0 is excluded and + 1 because we want to include the last day, not have it as the rim\n",
     "    \n",
     "    def populate_consts(self, name, bike_capacity, address, latitude, longitude):\n",
     "        self.name= name\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -110,8 +110,10 @@
     "        for row_i, row in enumerate(reader):\n",
     "            if row_i >= INPUT_ROWS_LIMIT:\n",
     "                break\n",
+    "            if int((datetime.datetime(int(row[1][0:4]), int(row[1][5:7]), int(row[1][8:10]), int(row[1][11: 13]), int(row[1][14: 16])) - EPOCH).total_seconds()) < 0:\n",
+    "                continue\n",
     "            try:\n",
-    "                epoch_time= int((datetime.datetime(int(row[1][0:4]), int(row[1][5:7]), int(row[1][8:10]), int(row[1][11: 13]), int(row[1][14: 16])) - datetime.datetime(2020,1,1,0,0)).total_seconds() / (SECS_IN_5MIN + 1)) # the unit of epoch_time is 5-minutes # the + 1 is a means to decrement the results\n",
+    "                epoch_time= int((datetime.datetime(int(row[1][0:4]), int(row[1][5:7]), int(row[1][8:10]), int(row[1][11: 13]), int(row[1][14: 16])) - EPOCH).total_seconds() / SECS_IN_5MIN)\n",
     "                stations[int(row[0]) - 1].data_days[int(epoch_time / (DATAPOINTS_PER_DAY - 1))].populate( \\\n",
     "                    int((datetime.datetime(int(row[1][0:4]), int(row[1][5:7]), int(row[1][8:10]), int(row[1][11: 13]), int(row[1][14: 16])) - datetime.datetime(int(row[1][0:4]), int(row[1][5:7]), int(row[1][8:10]), 0, 0)).total_seconds() / (SECS_IN_5MIN + 1)), \\\n",
     "                    epoch_time, \\\n",
@@ -126,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,68 +143,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Approach 01 - Data Prep\n",
     "\n",
-    "time= int((datetime.datetime(2020, 1, 1, 6, 25) - datetime.datetime(2020, 1, 1, 0, 0)).total_seconds() / SECS_IN_5MIN)\n",
-    "station_index_decrement= 1 # this is a varying offset for the indexing of stations that accounts for missing stations that are being ignored\n",
-    "row_vol= MAX_TIME - time - START_TIME * TOTAL_DAYS\n",
-    "fullness= np.full((row_vol, MAX_STATION_ID - len(MISSING_STATIONS)), DUD_VALUE, dtype=np.float)\n",
-    "bikes_changes_past5= np.full((row_vol, MAX_STATION_ID - len(MISSING_STATIONS)), DUD_VALUE, dtype=np.int)\n",
-    "bikes_changes_past15= np.full((row_vol, MAX_STATION_ID - len(MISSING_STATIONS)), DUD_VALUE, dtype=np.int)\n",
-    "bikes_changes_past45= np.full((row_vol, MAX_STATION_ID - len(MISSING_STATIONS)), DUD_VALUE, dtype=np.int)\n",
-    "day_of_week= np.full((row_vol, len(DAYS_OF_WEEK)), DUD_VALUE, dtype=np.int)\n",
-    "hour_of_day= np.full((row_vol, OPEN_HOURS + 1), DUD_VALUE, dtype=np.float) # + 1 because we need the 0th/24th hour to be represented despite its exclusion\n",
+    "fullness= np.full((MAX_TIME, MAX_STATION_ID - len(MISSING_STATIONS)), DUD_VALUE, dtype=np.int)\n",
+    "fullness_percent= np.full((MAX_TIME, MAX_STATION_ID - len(MISSING_STATIONS)), DUD_VALUE, dtype=np.float)\n",
+    "bikes_changes_past5= np.full((MAX_TIME, MAX_STATION_ID - len(MISSING_STATIONS)), DUD_VALUE, dtype=np.int)\n",
+    "bikes_changes_past15= np.full((MAX_TIME, MAX_STATION_ID - len(MISSING_STATIONS)), DUD_VALUE, dtype=np.int)\n",
+    "bikes_changes_past45= np.full((MAX_TIME, MAX_STATION_ID - len(MISSING_STATIONS)), DUD_VALUE, dtype=np.int)\n",
+    "day_of_week= np.full((MAX_TIME, len(DAYS_OF_WEEK)), DUD_VALUE, dtype=np.int)\n",
+    "hour_of_day= np.full((MAX_TIME, HOURS), DUD_VALUE, dtype=np.float)\n",
     "\n",
-    "rejected_days= 0\n",
+    "station_index_decrement= 1 # this is a varying offset for the indexing of stations that accounts for missing stations that are being ignored\n",
     "for epoch_day_i in range(TOTAL_DAYS):\n",
-    "    print(\"########### epoch_day_i: \", epoch_day_i)\n",
-    "    x= epoch_day_i * (DATAPOINTS_PER_DAY - START_TIME)\n",
+    "    #print(\"########### epoch_day_i: \", epoch_day_i)\n",
+    "    x= epoch_day_i * DATAPOINTS_PER_DAY\n",
     "    y= 0\n",
-    "    day= stations[2].data_days[epoch_day_i].day_of_week\n",
     "    \n",
-    "    block= np.zeros((DATAPOINTS_PER_DAY - START_TIME, OPEN_HOURS + 1), dtype=np.float)\n",
-    "    daily_epoch_time= stations[2].data_days[epoch_day_i].daily_epoch_time[START_TIME:]\n",
+    "    block= np.zeros((DATAPOINTS_PER_DAY, HOURS), dtype=np.float)\n",
+    "    daily_epoch_time= list(range(DATAPOINTS_PER_DAY))\n",
     "    for time_i in daily_epoch_time:\n",
-    "        if time_i != DUD_VALUE:\n",
-    "            hour= float(\"{:.3f}\".format(time_i / 12))\n",
-    "            hour-= START_TIME / DATAPOINTS_PER_HOUR\n",
-    "            block[time_i - START_TIME][int(hour) + 1]= hour % 1\n",
-    "            block[time_i - START_TIME][int(hour)]= 1 - (hour % 1)\n",
+    "        hour= float(\"{:.3f}\".format(time_i / 12))\n",
+    "        block[time_i][(int(hour) + 1) % 24]= hour % 1\n",
+    "        block[time_i][int(hour)]= 1 - (hour % 1)\n",
     "    hour_of_day[x:x + block.shape[0], y:y + block.shape[1]]= block\n",
     "    \n",
-    "    block= np.zeros((DATAPOINTS_PER_DAY - START_TIME, len(DAYS_OF_WEEK)), dtype=np.int)\n",
+    "    day= stations[2].data_days[epoch_day_i].day_of_week\n",
+    "    block= np.zeros((DATAPOINTS_PER_DAY, len(DAYS_OF_WEEK)), dtype=np.int)\n",
     "    for block_i, sub_arr in enumerate(block):\n",
     "        block[block_i][day]= 1\n",
     "    day_of_week[x:x + block.shape[0], y:y + block.shape[1]]= block\n",
     "    \n",
     "    for station in stations:\n",
-    "        print(\"###### station.index: \", station.index)\n",
+    "        #print(\"###### station.index: \", station.index)\n",
     "        if station.index == 1:\n",
     "            station_index_decrement= 1\n",
     "        if station.index in MISSING_STATIONS:\n",
-    "            #print(\"Rejected.\")\n",
     "            station_index_decrement+= 1\n",
     "            continue\n",
     "        y= station.index - station_index_decrement\n",
     "        \n",
-    "        block= station.data_days[epoch_day_i].percent_bikes[START_TIME:DATAPOINTS_PER_DAY]\n",
-    "        block= np.reshape(block, (DATAPOINTS_PER_DAY - START_TIME, 1))\n",
-    "        fullness[x:x + block.shape[0], y:y + block.shape[1]]= block\n",
-    "        #if num in arr:\n",
+    "        block= station.data_days[epoch_day_i].percent_bikes\n",
+    "        block= np.reshape(block, (DATAPOINTS_PER_DAY, 1))\n",
+    "        fullness_percent[x:x + block.shape[0], y:y + block.shape[1]]= block\n",
     "        \n",
-    "        block= station.data_days[epoch_day_i].bikes[START_TIME:DATAPOINTS_PER_DAY]\n",
-    "        block_5minchange= np.zeros(DATAPOINTS_PER_DAY - START_TIME, dtype=np.int)\n",
-    "        block_15minchange= np.zeros(DATAPOINTS_PER_DAY - START_TIME, dtype=np.int)\n",
-    "        block_45minchange= np.zeros(DATAPOINTS_PER_DAY - START_TIME, dtype=np.int)\n",
+    "        block= station.data_days[epoch_day_i].bikes\n",
+    "        block= np.reshape(block, (DATAPOINTS_PER_DAY, 1))\n",
+    "        fullness[x:x + block.shape[0], y:y + block.shape[1]]= block\n",
+    "        \n",
+    "        block= station.data_days[epoch_day_i].bikes\n",
+    "        block_5minchange= np.zeros(DATAPOINTS_PER_DAY, dtype=np.int)\n",
+    "        block_15minchange= np.zeros(DATAPOINTS_PER_DAY, dtype=np.int)\n",
+    "        block_45minchange= np.zeros(DATAPOINTS_PER_DAY, dtype=np.int)\n",
     "        for block_i in range(len(block)):\n",
     "            five_ago= block[block_i]; fifteen_ago= block[block_i]; fourtyfive_ago= block[block_i];\n",
-    "            accept= False\n",
-    "            decrements= 10\n",
-    "            for decrement in reversed(range(decrements)): # i.e. [9, 8, 7, 6, 5, 4, 3, 2, 1, 0]\n",
+    "            for decrement in reversed(range(DECREMENTS)): # i.e. [9, 8, 7, 6, 5, 4, 3, 2, 1, 0]\n",
     "                try:\n",
     "                    if block[block_i - min(1, decrement)] == DUD_VALUE or block[block_i - min(3, decrement)] == DUD_VALUE or block[block_i - min(9, decrement)] == DUD_VALUE:\n",
     "                        continue\n",
@@ -218,17 +216,18 @@
     "            while current == DUD_VALUE and decrement < 10:\n",
     "                current= block[block_i - decrement]\n",
     "                decrement+= 1\n",
-    "            #print(\"current: \", current)\n",
     "            block_5minchange[block_i]= current - five_ago\n",
     "            block_15minchange[block_i]= current - fifteen_ago\n",
     "            block_45minchange[block_i]= current - fourtyfive_ago\n",
-    "        block= np.reshape(block, (DATAPOINTS_PER_DAY - START_TIME, 1))\n",
-    "        block_5minchange= np.reshape(block_5minchange, (DATAPOINTS_PER_DAY - START_TIME, 1))\n",
-    "        block_15minchange= np.reshape(block_15minchange, (DATAPOINTS_PER_DAY - START_TIME, 1))\n",
-    "        block_45minchange= np.reshape(block_45minchange, (DATAPOINTS_PER_DAY - START_TIME, 1))\n",
+    "        block= np.reshape(block, (DATAPOINTS_PER_DAY, 1))\n",
+    "        block_5minchange= np.reshape(block_5minchange, (DATAPOINTS_PER_DAY, 1))\n",
+    "        block_15minchange= np.reshape(block_15minchange, (DATAPOINTS_PER_DAY, 1))\n",
+    "        block_45minchange= np.reshape(block_45minchange, (DATAPOINTS_PER_DAY, 1))\n",
     "        bikes_changes_past5[x:x + block.shape[0], y:y + block.shape[1]]= block_5minchange\n",
     "        bikes_changes_past15[x:x + block.shape[0], y:y + block.shape[1]]= block_15minchange\n",
-    "        bikes_changes_past45[x:x + block.shape[0], y:y + block.shape[1]]= block_45minchange"
+    "        bikes_changes_past45[x:x + block.shape[0], y:y + block.shape[1]]= block_45minchange\n",
+    "\n",
+    "#indices_bad_data= "
    ]
   },
   {
@@ -237,7 +236,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(fullness.shape)\n",
+    "print(fullness_percent.shape)\n",
     "print(bikes_changes_past5.shape)\n",
     "print(bikes_changes_past15.shape)\n",
     "print(bikes_changes_past45.shape)\n",
@@ -250,6 +249,7 @@
     "    print(\"\\n####################################\")\n",
     "    print(day_of_week[row_i])\n",
     "    print(hour_of_day[row_i])\n",
+    "    print(fullness_percent[row_i])\n",
     "    print(fullness[row_i])\n",
     "    print(bikes_changes_past5[row_i])\n",
     "    print(bikes_changes_past15[row_i])\n",
