fullness_inx outputs generating

--- a/mlp_regression_approach.ipynb
+++ b/mlp_regression_approach.ipynb
@@ -146,9 +146,10 @@
    "source": [
     "# Approach 01 - Data Prep\n",
     "\n",
-    "bad_data_indices= []\n",
-    "\n",
     "fullness= np.full((MAX_TIME, MAX_STATION_ID - len(MISSING_STATIONS)), 0, dtype=np.int)\n",
+    "fullness_in10= np.full((MAX_TIME, MAX_STATION_ID - len(MISSING_STATIONS)), 0, dtype=np.int)\n",
+    "fullness_in30= np.full((MAX_TIME, MAX_STATION_ID - len(MISSING_STATIONS)), 0, dtype=np.int)\n",
+    "fullness_in60= np.full((MAX_TIME, MAX_STATION_ID - len(MISSING_STATIONS)), 0, dtype=np.int)\n",
     "fullness_percent= np.full((MAX_TIME, MAX_STATION_ID - len(MISSING_STATIONS)), 0, dtype=np.float)\n",
     "bikes_changes_past5= np.full((MAX_TIME, MAX_STATION_ID - len(MISSING_STATIONS)), 0, dtype=np.int)\n",
     "bikes_changes_past15= np.full((MAX_TIME, MAX_STATION_ID - len(MISSING_STATIONS)), 0, dtype=np.int)\n",
@@ -185,7 +186,6 @@
     "            continue\n",
     "        y= station.index - station_index_decrement\n",
     "        \n",
-    "        \n",
     "        block= station.data_days[epoch_day_i].percent_bikes\n",
     "        block= np.reshape(block, (DATAPOINTS_PER_DAY, 1))\n",
     "        fullness_percent[x:x + block.shape[0], y:y + block.shape[1]]= block\n",
@@ -193,6 +193,14 @@
     "        block= station.data_days[epoch_day_i].bikes\n",
     "        block= np.reshape(block, (DATAPOINTS_PER_DAY, 1))\n",
     "        fullness[x:x + block.shape[0], y:y + block.shape[1]]= block\n",
+    "        \n",
+    "        bikes= station.data_days[epoch_day_i].bikes\n",
+    "        block= np.reshape(bikes[2:], (bikes.shape[0] - 2, 1))\n",
+    "        fullness_in10[x:x + block.shape[0], y:y + block.shape[1]]= block\n",
+    "        block= np.reshape(bikes[6:], (bikes.shape[0] - 6, 1))\n",
+    "        fullness_in30[x:x + block.shape[0], y:y + block.shape[1]]= block\n",
+    "        block= np.reshape(bikes[12:], (bikes.shape[0] - 12, 1))\n",
+    "        fullness_in60[x:x + block.shape[0], y:y + block.shape[1]]= block\n",
     "        \n",
     "        block= station.data_days[epoch_day_i].bikes\n",
     "        block_5minchange= np.zeros(DATAPOINTS_PER_DAY, dtype=np.int)\n",
@@ -226,7 +234,9 @@
     "        bikes_changes_past5[x:x + block.shape[0], y:y + block.shape[1]]= block_5minchange\n",
     "        bikes_changes_past15[x:x + block.shape[0], y:y + block.shape[1]]= block_15minchange\n",
     "        bikes_changes_past45[x:x + block.shape[0], y:y + block.shape[1]]= block_45minchange\n",
-    "\n"
+    "\n",
+    "X= np.full((MAX_TIME, fullness_percent.shape[1] + hour_of_day.shape[1] + day_of_week.shape[1] + bikes_changes_past5.shape[1] * 3), 0, dtype=np.int)\n",
+    "#y= np.full((MAX_TIME, ), 0, dtype=np.int)\n"
    ]
   },
   {
@@ -235,25 +245,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print(fullness_percent.shape)\n",
-    "# print(bikes_changes_past5.shape)\n",
-    "# print(bikes_changes_past15.shape)\n",
-    "# print(bikes_changes_past45.shape)\n",
-    "# print(day_of_week.shape)\n",
-    "# print(hour_of_day.shape)\n",
+    "print(fullness_percent.shape)\n",
+    "print(bikes_changes_past5.shape)\n",
+    "print(bikes_changes_past15.shape)\n",
+    "print(bikes_changes_past45.shape)\n",
+    "print(day_of_week.shape)\n",
+    "print(hour_of_day.shape)\n",
     "\n",
-    "# counter= 0\n",
-    "# limit= 22051\n",
-    "# for row_i in range(limit):\n",
-    "#     print(\"\\n####################################\")\n",
+    "counter= 0\n",
+    "limit= 22051\n",
+    "for row_i in range(limit):\n",
+    "    print(\"\\n####################################\")\n",
     "#     print(day_of_week[row_i])\n",
     "#     print(hour_of_day[row_i])\n",
     "#     print(fullness_percent[row_i])\n",
-    "#     print(fullness[row_i])\n",
+    "    print(fullness[row_i])\n",
+    "    print(\"---\")\n",
+    "    print(fullness_in10[row_i])\n",
+    "    print(fullness_in30[row_i])\n",
+    "    print(fullness_in60[row_i])\n",
     "#     print(bikes_changes_past5[row_i])\n",
     "#     print(bikes_changes_past15[row_i])\n",
     "#     print(bikes_changes_past45[row_i])\n",
-    "#     print(\"####################################\")"
+    "    print(\"####################################\")"
    ]
   },
   {
@@ -270,6 +284,17 @@
     "#regr.predict(X_test)\n",
     "\n",
     "#print(regr.score(X_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y= np.array([1, 2, 3, 4, 5])\n",
+    "print(y)\n",
+    "print(y[1:])"
    ]
   }
  ],
