--- a/mlp_regression_approach.ipynb
+++ b/mlp_regression_approach.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,8 +11,11 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.cm as cm\n",
     "import numpy as np; np.set_printoptions(threshold=sys.maxsize)\n",
+    "from sklearn.neural_network import MLPRegressor\n",
+    "from sklearn.datasets import make_regression\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "DUD_VALUE= 123\n",
+    "DUD_VALUE= 0\n",
     "TOTAL_ROWS= 2228278 # This number is greater than the total amount of rows circa epoch change to 27th, but it still works\n",
     "INPUT_ROWS_LIMIT= TOTAL_ROWS\n",
     "FILENAME= 'dublinbikes_2020_Q1.csv'\n",
@@ -75,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -125,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,8 +163,8 @@
     "station_index_decrement= 1 # this is a varying offset for the indexing of stations that accounts for missing stations that are being ignored\n",
     "for epoch_day_i in range(TOTAL_DAYS):\n",
     "    #print(\"########### epoch_day_i: \", epoch_day_i)\n",
-    "    x= epoch_day_i * DATAPOINTS_PER_DAY\n",
-    "    y= 0\n",
+    "    x_offset= epoch_day_i * DATAPOINTS_PER_DAY\n",
+    "    y_offset= 0\n",
     "    \n",
     "    block= np.zeros((DATAPOINTS_PER_DAY, HOURS), dtype=np.float)\n",
     "    daily_epoch_time= list(range(DATAPOINTS_PER_DAY))\n",
@@ -169,13 +172,13 @@
     "        hour= float(\"{:.3f}\".format(time_i / 12))\n",
     "        block[time_i][(int(hour) + 1) % 24]= hour % 1\n",
     "        block[time_i][int(hour)]= 1 - (hour % 1)\n",
-    "    hour_of_day[x:x + block.shape[0], y:y + block.shape[1]]= block\n",
+    "    hour_of_day[x_offset:x_offset + block.shape[0], y_offset:y_offset + block.shape[1]]= block\n",
     "    \n",
     "    day= stations[2].data_days[epoch_day_i].day_of_week\n",
     "    block= np.zeros((DATAPOINTS_PER_DAY, len(DAYS_OF_WEEK)), dtype=np.int)\n",
     "    for block_i, sub_arr in enumerate(block):\n",
     "        block[block_i][day]= 1\n",
-    "    day_of_week[x:x + block.shape[0], y:y + block.shape[1]]= block\n",
+    "    day_of_week[x_offset:x_offset + block.shape[0], y_offset:y_offset + block.shape[1]]= block\n",
     "    \n",
     "    for station in stations:\n",
     "        #print(\"###### station.index: \", station.index)\n",
@@ -184,23 +187,23 @@
     "        if station.index in MISSING_STATIONS:\n",
     "            station_index_decrement+= 1\n",
     "            continue\n",
-    "        y= station.index - station_index_decrement\n",
+    "        y_offset= station.index - station_index_decrement\n",
     "        \n",
     "        block= station.data_days[epoch_day_i].percent_bikes\n",
     "        block= np.reshape(block, (DATAPOINTS_PER_DAY, 1))\n",
-    "        fullness_percent[x:x + block.shape[0], y:y + block.shape[1]]= block\n",
+    "        fullness_percent[x_offset:x_offset + block.shape[0], y_offset:y_offset + block.shape[1]]= block\n",
     "        \n",
     "        block= station.data_days[epoch_day_i].bikes\n",
     "        block= np.reshape(block, (DATAPOINTS_PER_DAY, 1))\n",
-    "        fullness[x:x + block.shape[0], y:y + block.shape[1]]= block\n",
+    "        fullness[x_offset:x_offset + block.shape[0], y_offset:y_offset + block.shape[1]]= block\n",
     "        \n",
     "        bikes= station.data_days[epoch_day_i].bikes\n",
     "        block= np.reshape(bikes[2:], (bikes.shape[0] - 2, 1))\n",
-    "        fullness_in10[x:x + block.shape[0], y:y + block.shape[1]]= block\n",
+    "        fullness_in10[x_offset:x_offset + block.shape[0], y_offset:y_offset + block.shape[1]]= block\n",
     "        block= np.reshape(bikes[6:], (bikes.shape[0] - 6, 1))\n",
-    "        fullness_in30[x:x + block.shape[0], y:y + block.shape[1]]= block\n",
+    "        fullness_in30[x_offset:x_offset + block.shape[0], y_offset:y_offset + block.shape[1]]= block\n",
     "        block= np.reshape(bikes[12:], (bikes.shape[0] - 12, 1))\n",
-    "        fullness_in60[x:x + block.shape[0], y:y + block.shape[1]]= block\n",
+    "        fullness_in60[x_offset:x_offset + block.shape[0], y_offset:y_offset + block.shape[1]]= block\n",
     "        \n",
     "        block= station.data_days[epoch_day_i].bikes\n",
     "        block_5minchange= np.zeros(DATAPOINTS_PER_DAY, dtype=np.int)\n",
@@ -231,21 +234,33 @@
     "        block_5minchange= np.reshape(block_5minchange, (DATAPOINTS_PER_DAY, 1))\n",
     "        block_15minchange= np.reshape(block_15minchange, (DATAPOINTS_PER_DAY, 1))\n",
     "        block_45minchange= np.reshape(block_45minchange, (DATAPOINTS_PER_DAY, 1))\n",
-    "        bikes_changes_past5[x:x + block.shape[0], y:y + block.shape[1]]= block_5minchange\n",
-    "        bikes_changes_past15[x:x + block.shape[0], y:y + block.shape[1]]= block_15minchange\n",
-    "        bikes_changes_past45[x:x + block.shape[0], y:y + block.shape[1]]= block_45minchange\n",
-    "\n",
-    "X= np.full((MAX_TIME, fullness_percent.shape[1] + hour_of_day.shape[1] + day_of_week.shape[1] + bikes_changes_past5.shape[1] * 3), 0, dtype=np.int)\n",
-    "#y= np.full((MAX_TIME, ), 0, dtype=np.int)\n"
+    "        bikes_changes_past5[x_offset:x_offset + block.shape[0], y_offset:y_offset + block.shape[1]]= block_5minchange\n",
+    "        bikes_changes_past15[x_offset:x_offset + block.shape[0], y_offset:y_offset + block.shape[1]]= block_15minchange\n",
+    "        bikes_changes_past45[x_offset:x_offset + block.shape[0], y_offset:y_offset + block.shape[1]]= block_45minchange"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(19008, 108)\n",
+      "(19008, 108)\n",
+      "(19008, 108)\n",
+      "(19008, 108)\n",
+      "(19008, 108)\n",
+      "(19008, 7)\n",
+      "(19008, 24)\n"
+     ]
+    }
+   ],
    "source": [
     "print(fullness_percent.shape)\n",
+    "print(fullness_in10.shape)\n",
     "print(bikes_changes_past5.shape)\n",
     "print(bikes_changes_past15.shape)\n",
     "print(bikes_changes_past45.shape)\n",
@@ -254,47 +269,57 @@
     "\n",
     "counter= 0\n",
     "limit= 22051\n",
-    "for row_i in range(limit):\n",
-    "    print(\"\\n####################################\")\n",
+    "#for row_i in range(limit):\n",
+    "#     print(\"\\n####################################\")\n",
     "#     print(day_of_week[row_i])\n",
     "#     print(hour_of_day[row_i])\n",
     "#     print(fullness_percent[row_i])\n",
-    "    print(fullness[row_i])\n",
-    "    print(\"---\")\n",
-    "    print(fullness_in10[row_i])\n",
-    "    print(fullness_in30[row_i])\n",
-    "    print(fullness_in60[row_i])\n",
+    "#     print(fullness[row_i])\n",
+    "#     print(\"---\")\n",
+    "#     print(fullness_in10[row_i])\n",
+    "#     print(fullness_in30[row_i])\n",
+    "#     print(fullness_in60[row_i])\n",
     "#     print(bikes_changes_past5[row_i])\n",
     "#     print(bikes_changes_past15[row_i])\n",
     "#     print(bikes_changes_past45[row_i])\n",
-    "    print(\"####################################\")"
+    "#     print(\"####################################\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.999382608776389\n"
+     ]
+    }
+   ],
    "source": [
-    "#X= fullness_percent, hour_of_day, day_of_week, bikes_changes_past5, bikes_changes_past15, bikes_changes_past45\n",
-    "#y= fullness in 10 min, 30 min, and 1 hour for 2 stations\n",
+    "X= np.full((MAX_TIME, hour_of_day.shape[1] + day_of_week.shape[1] + bikes_changes_past5.shape[1] * 4), 0, dtype=np.int)\n",
+    "y= np.full((MAX_TIME, 6), 0, dtype=np.int)\n",
     "\n",
-    "#X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=1)\n",
-    "#regr = MLPRegressor(random_state=1, max_iter=500).fit(X_train, y_train)\n",
-    "#regr.predict(X_test)\n",
+    "y[0:MAX_TIME, 0:1]= np.reshape(fullness_in10[:,get_station_id(\"PORTOBELLO ROAD\")], (MAX_TIME, 1))\n",
+    "y[0:MAX_TIME, 1:2]= np.reshape(fullness_in10[:,get_station_id(\"CUSTOM HOUSE QUAY\")], (MAX_TIME, 1))\n",
+    "y[0:MAX_TIME, 2:3]= np.reshape(fullness_in30[:,get_station_id(\"PORTOBELLO ROAD\")], (MAX_TIME, 1))\n",
+    "y[0:MAX_TIME, 3:4]= np.reshape(fullness_in30[:,get_station_id(\"CUSTOM HOUSE QUAY\")], (MAX_TIME, 1))\n",
+    "y[0:MAX_TIME, 4:5]= np.reshape(fullness_in60[:,get_station_id(\"PORTOBELLO ROAD\")], (MAX_TIME, 1))\n",
+    "y[0:MAX_TIME, 5:6]= np.reshape(fullness_in60[:,get_station_id(\"CUSTOM HOUSE QUAY\")], (MAX_TIME, 1))\n",
+    "X[0:MAX_TIME, 0:7]= day_of_week\n",
+    "X[0:MAX_TIME, 7:31]= hour_of_day\n",
+    "X[0:MAX_TIME, 31:139]= fullness_percent\n",
+    "X[0:MAX_TIME, 139:247]= fullness_in10\n",
+    "X[0:MAX_TIME, 247:355]= fullness_in30\n",
+    "X[0:MAX_TIME, 355:463]= fullness_in60\n",
     "\n",
-    "#print(regr.score(X_test, y_test))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y= np.array([1, 2, 3, 4, 5])\n",
-    "print(y)\n",
-    "print(y[1:])"
+    "X_train, X_test, y_train, y_test= train_test_split(X, y, random_state=1)\n",
+    "regr = MLPRegressor(random_state=1, max_iter=500).fit(X_train, y_train)\n",
+    "regr.predict(X_test)\n",
+    "\n",
+    "print(regr.score(X_test, y_test))"
    ]
   }
  ],
