Some print statements for the result of 1st model

--- a/mlp_regression_approach.ipynb
+++ b/mlp_regression_approach.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,6 +14,7 @@
     "from sklearn.neural_network import MLPRegressor\n",
     "from sklearn.datasets import make_regression\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import KFold\n",
     "\n",
     "DUD_VALUE= 0\n",
     "TOTAL_ROWS= 2228278 # This number is greater than the total amount of rows circa epoch change to 27th, but it still works\n",
@@ -30,6 +31,7 @@
     "EPOCH= datetime.datetime(2020, 1, 27, 0, 0)\n",
     "MAX_TIME= int((datetime.datetime(2020,4,2,0,0) - EPOCH).total_seconds() / SECS_IN_5MIN)\n",
     "DECREMENTS= 10\n",
+    "K= 5\n",
     "\n",
     "class DataDay: # ideally this would be nested in the Station class\n",
     "    def __init__(self, index):\n",
@@ -243,32 +245,18 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(19008, 108)\n",
-      "(19008, 108)\n",
-      "(19008, 108)\n",
-      "(19008, 108)\n",
-      "(19008, 108)\n",
-      "(19008, 7)\n",
-      "(19008, 24)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(fullness_percent.shape)\n",
-    "print(fullness_in10.shape)\n",
-    "print(bikes_changes_past5.shape)\n",
-    "print(bikes_changes_past15.shape)\n",
-    "print(bikes_changes_past45.shape)\n",
-    "print(day_of_week.shape)\n",
-    "print(hour_of_day.shape)\n",
+    "# print(fullness_percent.shape)\n",
+    "# print(fullness_in10.shape)\n",
+    "# print(bikes_changes_past5.shape)\n",
+    "# print(bikes_changes_past15.shape)\n",
+    "# print(bikes_changes_past45.shape)\n",
+    "# print(day_of_week.shape)\n",
+    "# print(hour_of_day.shape)\n",
     "\n",
-    "counter= 0\n",
-    "limit= 22051\n",
+    "# counter= 0\n",
+    "# limit= 22051\n",
     "#for row_i in range(limit):\n",
     "#     print(\"\\n####################################\")\n",
     "#     print(day_of_week[row_i])\n",
@@ -287,17 +275,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.999382608776389\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "X= np.full((MAX_TIME, hour_of_day.shape[1] + day_of_week.shape[1] + bikes_changes_past5.shape[1] * 4), 0, dtype=np.int)\n",
     "y= np.full((MAX_TIME, 6), 0, dtype=np.int)\n",
@@ -315,11 +295,47 @@
     "X[0:MAX_TIME, 247:355]= fullness_in30\n",
     "X[0:MAX_TIME, 355:463]= fullness_in60\n",
     "\n",
-    "X_train, X_test, y_train, y_test= train_test_split(X, y, random_state=1)\n",
-    "regr = MLPRegressor(random_state=1, max_iter=500).fit(X_train, y_train)\n",
-    "regr.predict(X_test)\n",
+    "# X_train, X_test, y_train, y_test= train_test_split(X, y, random_state=1)\n",
+    "# regr = MLPRegressor(random_state=1, max_iter=500).fit(X_train, y_train)\n",
+    "# y_pred= regr.predict(X_test)\n",
     "\n",
-    "print(regr.score(X_test, y_test))"
+    "# print(regr.score(X_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data split  1  accuracy:  99.83857470592366  %\n",
+      "Data split  2  accuracy:  99.87770631759508  %\n",
+      "Data split  3  accuracy:  99.87436769078994  %\n",
+      "Data split  4  accuracy:  99.8777281011339  %\n",
+      "Data split  5  accuracy:  99.64852762900345  %\n",
+      "\n",
+      "Average accuracy of model:  99.82338088888922  %\n"
+     ]
+    }
+   ],
+   "source": [
+    "kf= KFold(n_splits= K)\n",
+    "kf.get_n_splits(X)\n",
+    "score_sum= 0.0\n",
+    "i= 1\n",
+    "for train_index, test_index in kf.split(X):\n",
+    "    X_train, X_test= X[train_index], X[test_index]\n",
+    "    y_train, y_test= y[train_index], y[test_index]\n",
+    "    regr= MLPRegressor(random_state= 1, max_iter= 500).fit(X_train, y_train)\n",
+    "    y_pred= regr.predict(X_test)\n",
+    "    score_sum+= regr.score(X_test, y_test)\n",
+    "    print(\"Data split \", i, \" accuracy: \", regr.score(X_test, y_test) * 100, \" %\")\n",
+    "    i+= 1\n",
+    "\n",
+    "print(\"\\nAverage accuracy of model: \", (score_sum / K) * 100, \" %\")"
    ]
   }
  ],
