--- a/bike_predictions.ipynb
+++ b/bike_predictions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,6 +14,8 @@
     "from sklearn.neural_network import MLPRegressor\n",
     "from sklearn.datasets import make_regression\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import KFold\n",
+    "from sklearn.neighbors import KNeighborsRegressor\n",
     "\n",
     "DUD_VALUE= 0\n",
     "TOTAL_ROWS= 2228278 # This number is greater than the total amount of rows circa epoch change to 27th, but it still works\n",
@@ -30,6 +32,7 @@
     "EPOCH= datetime.datetime(2020, 1, 27, 0, 0)\n",
     "MAX_TIME= int((datetime.datetime(2020,4,2,0,0) - EPOCH).total_seconds() / SECS_IN_5MIN)\n",
     "DECREMENTS= 10\n",
+    "K= 5\n",
     "\n",
     "class DataDay: # ideally this would be nested in the Station class\n",
     "    def __init__(self, index):\n",
@@ -128,27 +131,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# counter= 0\n",
-    "# limit= 50\n",
-    "# for row_i in range(limit):\n",
-    "#     print(\"################# row_i: \",row_i)\n",
-    "#     for s_i, station in enumerate(stations):\n",
-    "        \n",
-    "#         print(stations[s_i].data_days[row_i].day_of_week)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Approach 01 - Data Prep\n",
-    "\n",
     "fullness= np.full((MAX_TIME, MAX_STATION_ID - len(MISSING_STATIONS)), 0, dtype=np.int)\n",
     "fullness_in10= np.full((MAX_TIME, MAX_STATION_ID - len(MISSING_STATIONS)), 0, dtype=np.int)\n",
     "fullness_in30= np.full((MAX_TIME, MAX_STATION_ID - len(MISSING_STATIONS)), 0, dtype=np.int)\n",
@@ -243,32 +229,18 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(19008, 108)\n",
-      "(19008, 108)\n",
-      "(19008, 108)\n",
-      "(19008, 108)\n",
-      "(19008, 108)\n",
-      "(19008, 7)\n",
-      "(19008, 24)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(fullness_percent.shape)\n",
-    "print(fullness_in10.shape)\n",
-    "print(bikes_changes_past5.shape)\n",
-    "print(bikes_changes_past15.shape)\n",
-    "print(bikes_changes_past45.shape)\n",
-    "print(day_of_week.shape)\n",
-    "print(hour_of_day.shape)\n",
+    "# print(fullness_percent.shape)\n",
+    "# print(fullness_in10.shape)\n",
+    "# print(bikes_changes_past5.shape)\n",
+    "# print(bikes_changes_past15.shape)\n",
+    "# print(bikes_changes_past45.shape)\n",
+    "# print(day_of_week.shape)\n",
+    "# print(hour_of_day.shape)\n",
     "\n",
-    "counter= 0\n",
-    "limit= 22051\n",
+    "# counter= 0\n",
+    "# limit= 22051\n",
     "#for row_i in range(limit):\n",
     "#     print(\"\\n####################################\")\n",
     "#     print(day_of_week[row_i])\n",
@@ -287,27 +259,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.999382608776389\n"
+      "Data split  1  accuracy:  99.83857470592366  %\n",
+      "Data split  2  accuracy:  99.87770631759508  %\n",
+      "Data split  3  accuracy:  99.87436769078994  %\n",
+      "Data split  4  accuracy:  99.8777281011339  %\n",
+      "Data split  5  accuracy:  99.64852762900345  %\n",
+      "\n",
+      "Average accuracy of model:  99.82338088888922  %\n"
      ]
     }
    ],
    "source": [
-    "X= np.full((MAX_TIME, hour_of_day.shape[1] + day_of_week.shape[1] + bikes_changes_past5.shape[1] * 4), 0, dtype=np.int)\n",
     "y= np.full((MAX_TIME, 6), 0, dtype=np.int)\n",
-    "\n",
     "y[0:MAX_TIME, 0:1]= np.reshape(fullness_in10[:,get_station_id(\"PORTOBELLO ROAD\")], (MAX_TIME, 1))\n",
     "y[0:MAX_TIME, 1:2]= np.reshape(fullness_in10[:,get_station_id(\"CUSTOM HOUSE QUAY\")], (MAX_TIME, 1))\n",
     "y[0:MAX_TIME, 2:3]= np.reshape(fullness_in30[:,get_station_id(\"PORTOBELLO ROAD\")], (MAX_TIME, 1))\n",
     "y[0:MAX_TIME, 3:4]= np.reshape(fullness_in30[:,get_station_id(\"CUSTOM HOUSE QUAY\")], (MAX_TIME, 1))\n",
     "y[0:MAX_TIME, 4:5]= np.reshape(fullness_in60[:,get_station_id(\"PORTOBELLO ROAD\")], (MAX_TIME, 1))\n",
     "y[0:MAX_TIME, 5:6]= np.reshape(fullness_in60[:,get_station_id(\"CUSTOM HOUSE QUAY\")], (MAX_TIME, 1))\n",
+    "\n",
+    "X= np.full((MAX_TIME, hour_of_day.shape[1] + day_of_week.shape[1] + bikes_changes_past5.shape[1] * 4), 0, dtype=np.int)\n",
     "X[0:MAX_TIME, 0:7]= day_of_week\n",
     "X[0:MAX_TIME, 7:31]= hour_of_day\n",
     "X[0:MAX_TIME, 31:139]= fullness_percent\n",
@@ -315,12 +293,83 @@
     "X[0:MAX_TIME, 247:355]= fullness_in30\n",
     "X[0:MAX_TIME, 355:463]= fullness_in60\n",
     "\n",
-    "X_train, X_test, y_train, y_test= train_test_split(X, y, random_state=1)\n",
-    "regr = MLPRegressor(random_state=1, max_iter=500).fit(X_train, y_train)\n",
-    "regr.predict(X_test)\n",
+    "kf= KFold(n_splits= K)\n",
+    "kf.get_n_splits(X)\n",
+    "score_sum= 0.0\n",
+    "i= 1\n",
+    "for train_index, test_index in kf.split(X):\n",
+    "    X_train, X_test= X[train_index], X[test_index]\n",
+    "    y_train, y_test= y[train_index], y[test_index]\n",
+    "    regr= MLPRegressor(random_state= 1, max_iter= 500).fit(X_train, y_train)\n",
+    "    y_pred= regr.predict(X_test)\n",
+    "    score_sum+= regr.score(X_test, y_test)\n",
+    "    print(\"Data split \", i, \" accuracy: \", regr.score(X_test, y_test) * 100, \" %\")\n",
+    "    i+= 1\n",
     "\n",
-    "print(regr.score(X_test, y_test))"
+    "print(\"\\nAverage accuracy of model: \", (score_sum / K) * 100, \" %\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.5 0.5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test KNReg\n",
+    "\n",
+    "X= [[10], [10], [10], [10]] # day time\n",
+    "y= [[0, 0], [0, 0], [1, 1], [1, 1]]\n",
+    "\n",
+    "neigh= KNeighborsRegressor(n_neighbors= 4, weights='uniform').fit(X, y)\n",
+    "\n",
+    "print(neigh.predict([[10]]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(288, 126)\n"
+     ]
+    }
+   ],
+   "source": [
+    "dates_per_day= np.zeros((2, len(DAYS_OF_WEEK)), dtype=np.int)\n",
+    "\n",
+    "station1= stations[get_station_id(\"PORTOBELLO ROAD\")]\n",
+    "station2= stations[get_station_id(\"CUSTOM HOUSE QUAY\")]\n",
+    "\n",
+    "for data_day in station1.data_days:\n",
+    "    dates_per_day[0, data_day.day_of_week]+= 1\n",
+    "for data_day in station2.data_days:\n",
+    "    dates_per_day[1, data_day.day_of_week]+= 1\n",
+    "min_dates_per_day= np.amin(amounts_of_weekdays)\n",
+    "\n",
+    "X= np.full((DATAPOINTS_PER_DAY, len(DAYS_OF_WEEK) * min_dates_per_day * 2), 0, dtype=np.int)\n",
+    "print(X.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
