--- a/bike_predictions.ipynb
+++ b/bike_predictions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,20 +277,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data split  1  accuracy:  99.83857470592366  %\n",
-      "Data split  2  accuracy:  99.87770631759508  %\n",
-      "Data split  3  accuracy:  99.87436769078994  %\n",
-      "Data split  4  accuracy:  99.8777281011339  %\n",
-      "Data split  5  accuracy:  99.64852762900345  %\n",
+      "Data split  1  accuracy:  12.259083537652081  %\n",
+      "Data split  2  accuracy:  21.261603358582683  %\n",
+      "Data split  3  accuracy:  11.008418820779449  %\n",
+      "Data split  4  accuracy:  -13.138720672872303  %\n",
+      "Data split  5  accuracy:  -207.34713970086577  %\n",
       "\n",
-      "Average accuracy of model:  99.82338088888922  %\n"
+      "Average accuracy of model:  -35.191350931344765  %\n"
      ]
     }
    ],
@@ -299,9 +299,9 @@
     "X[0:MAX_TIME, 0:7]= day_of_week\n",
     "X[0:MAX_TIME, 7:31]= hour_of_day\n",
     "X[0:MAX_TIME, 31:139]= fullness_percent\n",
-    "X[0:MAX_TIME, 139:247]= fullness_in10\n",
-    "X[0:MAX_TIME, 247:355]= fullness_in30\n",
-    "X[0:MAX_TIME, 355:463]= fullness_in60\n",
+    "X[0:MAX_TIME, 139:247]= bikes_changes_past5\n",
+    "X[0:MAX_TIME, 247:355]= bikes_changes_past15\n",
+    "X[0:MAX_TIME, 355:463]= bikes_changes_past45\n",
     "\n",
     "kf= KFold(n_splits= K)\n",
     "kf.get_n_splits(X)\n",
@@ -321,70 +321,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
+    "X= np.full((MAX_TIME, 6), -1, dtype=np.float)\n",
+    "\n",
     "positions= []\n",
     "\n",
     "t= 0\n",
     "while t < 2 * math.pi:\n",
     "    positions.append((1 - (R * math.cos(t) + R), R * math.sin(t) + R))\n",
-    "    t+= STEP_SIZE\n"
+    "    t+= STEP_SIZE\n",
+    "\n",
+    "pos_i= 0\n",
+    "for time_i in range(MAX_TIME):\n",
+    "    X[time_i, 0]= positions[pos_i][0]\n",
+    "    X[time_i, 1]= positions[pos_i][1]\n",
+    "    pos_i= (pos_i + 1) % len(positions)\n",
+    "\n",
+    "index= get_station_id(\"PORTOBELLO ROAD\")\n",
+    "X[0:MAX_TIME, 2:3]= bikes_changes_past5[0:MAX_TIME, index:index + 1]\n",
+    "X[0:MAX_TIME, 3:4]= bikes_changes_past15[0:MAX_TIME, index:index + 1]\n",
+    "X[0:MAX_TIME, 4:5]= bikes_changes_past45[0:MAX_TIME, index:index + 1]\n",
+    "X[0:MAX_TIME, 5:6]= fullness_percent[0:MAX_TIME, index:index + 1]\n",
+    "\n",
+    "#print(X)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[2. 1.]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Test KNReg\n",
+    "# # Test KNReg\n",
     "\n",
-    "X= [[75, 25, 1, 1], [50, 25, 1, 1], [25, 25, 1, 1], [75, 75, 1, 1], [50, 75, 1, 1], [25, 75, 1, 1]] # day time\n",
-    "y= [[1, 2], [1, 2], [1, 2], [2, 1], [2, 1], [2, 1]]\n",
+    "# X= [[75, 25, 1, 1], [50, 25, 1, 1], [25, 25, 1, 1], [75, 75, 1, 1], [50, 75, 1, 1], [25, 75, 1, 1]] # day time\n",
+    "# y= [[1, 2], [1, 2], [1, 2], [2, 1], [2, 1], [2, 1]]\n",
     "\n",
-    "neigh= KNeighborsRegressor(n_neighbors= 3, weights='uniform').fit(X, y)\n",
+    "# neigh= KNeighborsRegressor(n_neighbors= 3, weights='uniform').fit(X, y)\n",
     "\n",
-    "print(neigh.predict([[50, 80, 1, 1]]))"
+    "# print(neigh.predict([[50, 80, 1, 1]]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(288, 126)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dates_per_day= np.zeros((2, len(DAYS_OF_WEEK)), dtype=np.int)\n",
+    "# dates_per_day= np.zeros((2, len(DAYS_OF_WEEK)), dtype=np.int)\n",
     "\n",
-    "station1= stations[get_station_id(\"PORTOBELLO ROAD\")]\n",
-    "station2= stations[get_station_id(\"CUSTOM HOUSE QUAY\")]\n",
+    "# station1= stations[get_station_id(\"PORTOBELLO ROAD\")]\n",
+    "# station2= stations[get_station_id(\"CUSTOM HOUSE QUAY\")]\n",
     "\n",
-    "for data_day in station1.data_days:\n",
-    "    dates_per_day[0, data_day.day_of_week]+= 1\n",
-    "for data_day in station2.data_days:\n",
-    "    dates_per_day[1, data_day.day_of_week]+= 1\n",
-    "min_dates_per_day= np.amin(amounts_of_weekdays)\n",
+    "# for data_day in station1.data_days:\n",
+    "#     dates_per_day[0, data_day.day_of_week]+= 1\n",
+    "# for data_day in station2.data_days:\n",
+    "#     dates_per_day[1, data_day.day_of_week]+= 1\n",
+    "# min_dates_per_day= np.amin(amounts_of_weekdays)\n",
     "\n",
-    "X= np.full((DATAPOINTS_PER_DAY, len(DAYS_OF_WEEK) * min_dates_per_day * 2), 0, dtype=np.int)"
+    "# X= np.full((DATAPOINTS_PER_DAY, len(DAYS_OF_WEEK) * min_dates_per_day * 2), 0, dtype=np.int)"
    ]
   }
  ],
