Second approach working at ~70 accuracy

--- a/bike_predictions.ipynb
+++ b/bike_predictions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,7 @@
     "from sklearn.model_selection import KFold\n",
     "from sklearn.neighbors import KNeighborsRegressor\n",
     "import math\n",
+    "from sklearn.model_selection import cross_val_score\n",
     "\n",
     "DUD_VALUE= 0\n",
     "TOTAL_ROWS= 2228278 # This number is greater than the total amount of rows circa epoch change to 27th, but it still works\n",
@@ -262,21 +263,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y= np.full((MAX_TIME, 6), 0, dtype=np.int)\n",
-    "y[0:MAX_TIME, 0:1]= np.reshape(fullness_in10[:,get_station_id(\"PORTOBELLO ROAD\")], (MAX_TIME, 1))\n",
-    "y[0:MAX_TIME, 1:2]= np.reshape(fullness_in10[:,get_station_id(\"CUSTOM HOUSE QUAY\")], (MAX_TIME, 1))\n",
-    "y[0:MAX_TIME, 2:3]= np.reshape(fullness_in30[:,get_station_id(\"PORTOBELLO ROAD\")], (MAX_TIME, 1))\n",
-    "y[0:MAX_TIME, 3:4]= np.reshape(fullness_in30[:,get_station_id(\"CUSTOM HOUSE QUAY\")], (MAX_TIME, 1))\n",
-    "y[0:MAX_TIME, 4:5]= np.reshape(fullness_in60[:,get_station_id(\"PORTOBELLO ROAD\")], (MAX_TIME, 1))\n",
-    "y[0:MAX_TIME, 5:6]= np.reshape(fullness_in60[:,get_station_id(\"CUSTOM HOUSE QUAY\")], (MAX_TIME, 1))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -295,6 +281,14 @@
     }
    ],
    "source": [
+    "y= np.full((MAX_TIME, 6), 0, dtype=np.int)\n",
+    "y[0:MAX_TIME, 0:1]= np.reshape(fullness_in10[:,get_station_id(\"PORTOBELLO ROAD\")], (MAX_TIME, 1))\n",
+    "y[0:MAX_TIME, 1:2]= np.reshape(fullness_in10[:,get_station_id(\"CUSTOM HOUSE QUAY\")], (MAX_TIME, 1))\n",
+    "y[0:MAX_TIME, 2:3]= np.reshape(fullness_in30[:,get_station_id(\"PORTOBELLO ROAD\")], (MAX_TIME, 1))\n",
+    "y[0:MAX_TIME, 3:4]= np.reshape(fullness_in30[:,get_station_id(\"CUSTOM HOUSE QUAY\")], (MAX_TIME, 1))\n",
+    "y[0:MAX_TIME, 4:5]= np.reshape(fullness_in60[:,get_station_id(\"PORTOBELLO ROAD\")], (MAX_TIME, 1))\n",
+    "y[0:MAX_TIME, 5:6]= np.reshape(fullness_in60[:,get_station_id(\"CUSTOM HOUSE QUAY\")], (MAX_TIME, 1))\n",
+    "\n",
     "X= np.full((MAX_TIME, hour_of_day.shape[1] + day_of_week.shape[1] + bikes_changes_past5.shape[1] * 4), 0, dtype=np.int)\n",
     "X[0:MAX_TIME, 0:7]= day_of_week\n",
     "X[0:MAX_TIME, 7:31]= hour_of_day\n",
@@ -321,11 +315,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X= np.full((MAX_TIME, 6), -1, dtype=np.float)\n",
+    "X= np.full((MAX_TIME, 5), -1, dtype=np.float)\n",
     "\n",
     "positions= []\n",
     "\n",
@@ -343,10 +337,38 @@
     "index= get_station_id(\"PORTOBELLO ROAD\")\n",
     "X[0:MAX_TIME, 2:3]= bikes_changes_past5[0:MAX_TIME, index:index + 1]\n",
     "X[0:MAX_TIME, 3:4]= bikes_changes_past15[0:MAX_TIME, index:index + 1]\n",
-    "X[0:MAX_TIME, 4:5]= bikes_changes_past45[0:MAX_TIME, index:index + 1]\n",
-    "X[0:MAX_TIME, 5:6]= fullness_percent[0:MAX_TIME, index:index + 1]\n",
+    "X[0:MAX_TIME, 4:5]= fullness_percent[0:MAX_TIME, index:index + 1]\n",
+    "\n",
+    "y= np.full((MAX_TIME, 3), 0, dtype=np.int)\n",
+    "y[0:MAX_TIME, 0:1]= np.reshape(fullness_in10[:,index], (MAX_TIME, 1))\n",
+    "y[0:MAX_TIME, 1:2]= np.reshape(fullness_in30[:,index], (MAX_TIME, 1))\n",
+    "y[0:MAX_TIME, 2:3]= np.reshape(fullness_in60[:,index], (MAX_TIME, 1))\n",
     "\n",
     "#print(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.94888804 0.95045243 0.96736847 0.94180191 0.23107503]\n",
+      "cv_scores mean:0.8079171763199342\n"
+     ]
+    }
+   ],
+   "source": [
+    "neigh= KNeighborsRegressor(n_neighbors= 30, weights='distance')\n",
+    "\n",
+    "cv_scores= cross_val_score(neigh, X, y, cv=5)\n",
+    "\n",
+    "#print each cv score (accuracy) and average them\n",
+    "print(cv_scores)\n",
+    "print('cv_scores mean:{}'.format(np.mean(cv_scores)))"
    ]
   },
   {
