--- a/bike_predictions.ipynb
+++ b/bike_predictions.ipynb
@@ -263,39 +263,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data split  1  accuracy:  12.259083537652081  %\n",
-      "Data split  2  accuracy:  21.261603358582683  %\n",
-      "Data split  3  accuracy:  11.008418820779449  %\n",
-      "Data split  4  accuracy:  -13.138720672872303  %\n",
-      "Data split  5  accuracy:  -207.34713970086577  %\n",
+      "Data split  1  accuracy:  58.449330340112205  %\n",
+      "Data split  2  accuracy:  56.3937636482677  %\n",
+      "Data split  3  accuracy:  63.48837525285585  %\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/sklearn/neural_network/_multilayer_perceptron.py:582: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (500) reached and the optimization hasn't converged yet.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data split  4  accuracy:  38.717434161723794  %\n",
+      "Data split  5  accuracy:  -344.8286663554154  %\n",
       "\n",
-      "Average accuracy of model:  -35.191350931344765  %\n"
+      "Average accuracy of model:  -25.555952590491167  %\n"
      ]
     }
    ],
    "source": [
-    "y= np.full((MAX_TIME, 6), 0, dtype=np.int)\n",
-    "y[0:MAX_TIME, 0:1]= np.reshape(fullness_in10[:,get_station_id(\"PORTOBELLO ROAD\")], (MAX_TIME, 1))\n",
-    "y[0:MAX_TIME, 1:2]= np.reshape(fullness_in10[:,get_station_id(\"CUSTOM HOUSE QUAY\")], (MAX_TIME, 1))\n",
-    "y[0:MAX_TIME, 2:3]= np.reshape(fullness_in30[:,get_station_id(\"PORTOBELLO ROAD\")], (MAX_TIME, 1))\n",
-    "y[0:MAX_TIME, 3:4]= np.reshape(fullness_in30[:,get_station_id(\"CUSTOM HOUSE QUAY\")], (MAX_TIME, 1))\n",
-    "y[0:MAX_TIME, 4:5]= np.reshape(fullness_in60[:,get_station_id(\"PORTOBELLO ROAD\")], (MAX_TIME, 1))\n",
-    "y[0:MAX_TIME, 5:6]= np.reshape(fullness_in60[:,get_station_id(\"CUSTOM HOUSE QUAY\")], (MAX_TIME, 1))\n",
+    "index= get_station_id(\"PORTOBELLO ROAD\")\n",
     "\n",
-    "X= np.full((MAX_TIME, hour_of_day.shape[1] + day_of_week.shape[1] + bikes_changes_past5.shape[1] * 4), 0, dtype=np.int)\n",
+    "y= np.full((MAX_TIME, 3), 0, dtype=np.int)\n",
+    "y[0:MAX_TIME, 0:1]= np.reshape(fullness_in10[:,index], (MAX_TIME, 1))\n",
+    "#y[0:MAX_TIME, 1:2]= np.reshape(fullness_in10[:,get_station_id(\"CUSTOM HOUSE QUAY\")], (MAX_TIME, 1))\n",
+    "y[0:MAX_TIME, 1:2]= np.reshape(fullness_in30[:,index], (MAX_TIME, 1))\n",
+    "#y[0:MAX_TIME, 3:4]= np.reshape(fullness_in30[:,get_station_id(\"CUSTOM HOUSE QUAY\")], (MAX_TIME, 1))\n",
+    "y[0:MAX_TIME, 2:3]= np.reshape(fullness_in60[:,index], (MAX_TIME, 1))\n",
+    "#y[0:MAX_TIME, 5:6]= np.reshape(fullness_in60[:,get_station_id(\"CUSTOM HOUSE QUAY\")], (MAX_TIME, 1))\n",
+    "\n",
+    "X= np.full((MAX_TIME, hour_of_day.shape[1] + day_of_week.shape[1] + 4), 0, dtype=np.int)\n",
     "X[0:MAX_TIME, 0:7]= day_of_week\n",
     "X[0:MAX_TIME, 7:31]= hour_of_day\n",
-    "X[0:MAX_TIME, 31:139]= fullness_percent\n",
-    "X[0:MAX_TIME, 139:247]= bikes_changes_past5\n",
-    "X[0:MAX_TIME, 247:355]= bikes_changes_past15\n",
-    "X[0:MAX_TIME, 355:463]= bikes_changes_past45\n",
+    "X[0:MAX_TIME, 31:32]= fullness_percent[0:MAX_TIME, index:index+1]\n",
+    "X[0:MAX_TIME, 32:33]= bikes_changes_past5[0:MAX_TIME, index:index+1]\n",
+    "X[0:MAX_TIME, 33:34]= bikes_changes_past15[0:MAX_TIME, index:index+1]\n",
+    "X[0:MAX_TIME, 34:35]= bikes_changes_past45[0:MAX_TIME, index:index+1]\n",
     "\n",
     "kf= KFold(n_splits= K)\n",
     "kf.get_n_splits(X)\n",
@@ -309,8 +325,13 @@
     "    score_sum+= regr.score(X_test, y_test)\n",
     "    print(\"Data split \", i, \" accuracy: \", regr.score(X_test, y_test) * 100, \" %\")\n",
     "    i+= 1\n",
+    "print(\"\\nAverage accuracy of model: \", (score_sum / K) * 100, \" %\")\n",
     "\n",
-    "print(\"\\nAverage accuracy of model: \", (score_sum / K) * 100, \" %\")"
+    "# regr= MLPRegressor(random_state= 1, max_iter= 500).fit(X_train, y_train)\n",
+    "\n",
+    "# scores= cross_val_score(regr, X, y, cv=5)\n",
+    "\n",
+    "# print(scores)"
    ]
   },
   {
