--- a/bike_predictions.ipynb
+++ b/bike_predictions.ipynb
@@ -263,34 +263,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data split  1  accuracy:  58.449330340112205  %\n",
-      "Data split  2  accuracy:  56.3937636482677  %\n",
-      "Data split  3  accuracy:  63.48837525285585  %\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/sklearn/neural_network/_multilayer_perceptron.py:582: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (500) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data split  4  accuracy:  38.717434161723794  %\n",
-      "Data split  5  accuracy:  -344.8286663554154  %\n",
+      "Data split  1  accuracy:  96.40710865746992  %\n",
+      "Data split  2  accuracy:  97.45073515003462  %\n",
+      "Data split  3  accuracy:  98.44706688236448  %\n",
+      "Data split  4  accuracy:  96.08811423178055  %\n",
+      "Data split  5  accuracy:  67.28540332565863  %\n",
       "\n",
-      "Average accuracy of model:  -25.555952590491167  %\n"
+      "Average accuracy of model:  91.13568564946164  %\n"
      ]
     }
    ],
@@ -305,7 +291,7 @@
     "y[0:MAX_TIME, 2:3]= np.reshape(fullness_in60[:,index], (MAX_TIME, 1))\n",
     "#y[0:MAX_TIME, 5:6]= np.reshape(fullness_in60[:,get_station_id(\"CUSTOM HOUSE QUAY\")], (MAX_TIME, 1))\n",
     "\n",
-    "X= np.full((MAX_TIME, hour_of_day.shape[1] + day_of_week.shape[1] + 4), 0, dtype=np.int)\n",
+    "X= np.full((MAX_TIME, hour_of_day.shape[1] + day_of_week.shape[1] + 4), 0, dtype=np.float)\n",
     "X[0:MAX_TIME, 0:7]= day_of_week\n",
     "X[0:MAX_TIME, 7:31]= hour_of_day\n",
     "X[0:MAX_TIME, 31:32]= fullness_percent[0:MAX_TIME, index:index+1]\n",
@@ -320,7 +306,7 @@
     "for train_index, test_index in kf.split(X):\n",
     "    X_train, X_test= X[train_index], X[test_index]\n",
     "    y_train, y_test= y[train_index], y[test_index]\n",
-    "    regr= MLPRegressor(random_state= 1, max_iter= 500).fit(X_train, y_train)\n",
+    "    regr= MLPRegressor(random_state= 1, max_iter= 1000).fit(X_train, y_train)\n",
     "    y_pred= regr.predict(X_test)\n",
     "    score_sum+= regr.score(X_test, y_test)\n",
     "    print(\"Data split \", i, \" accuracy: \", regr.score(X_test, y_test) * 100, \" %\")\n",
