Results for existing approaches documented

--- a/bike_predictions.ipynb
+++ b/bike_predictions.ipynb
@@ -251,7 +251,6 @@
     "#     print(hour_of_day[row_i])\n",
     "#     print(fullness_percent[row_i])\n",
     "#     print(fullness[row_i])\n",
-    "#     print(\"---\")\n",
     "#     print(fullness_in10[row_i])\n",
     "#     print(fullness_in30[row_i])\n",
     "#     print(fullness_in60[row_i])\n",
@@ -263,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -281,52 +280,60 @@
     }
    ],
    "source": [
-    "index= get_station_id(\"PORTOBELLO ROAD\")\n",
     "\n",
-    "y= np.full((MAX_TIME, 3), 0, dtype=np.int)\n",
-    "y[0:MAX_TIME, 0:1]= np.reshape(fullness_in10[:,index], (MAX_TIME, 1))\n",
-    "#y[0:MAX_TIME, 1:2]= np.reshape(fullness_in10[:,get_station_id(\"CUSTOM HOUSE QUAY\")], (MAX_TIME, 1))\n",
-    "y[0:MAX_TIME, 1:2]= np.reshape(fullness_in30[:,index], (MAX_TIME, 1))\n",
-    "#y[0:MAX_TIME, 3:4]= np.reshape(fullness_in30[:,get_station_id(\"CUSTOM HOUSE QUAY\")], (MAX_TIME, 1))\n",
-    "y[0:MAX_TIME, 2:3]= np.reshape(fullness_in60[:,index], (MAX_TIME, 1))\n",
-    "#y[0:MAX_TIME, 5:6]= np.reshape(fullness_in60[:,get_station_id(\"CUSTOM HOUSE QUAY\")], (MAX_TIME, 1))\n",
+    "def run_approach1(station_index):\n",
+    "    index= get_station_id(\"PORTOBELLO ROAD\")\n",
+    "    y= np.full((MAX_TIME, 3), 0, dtype=np.int)\n",
+    "    y[0:MAX_TIME, 0:1]= np.reshape(fullness_in10[:,index], (MAX_TIME, 1))\n",
+    "    #y[0:MAX_TIME, 1:2]= np.reshape(fullness_in10[:,get_station_id(\"CUSTOM HOUSE QUAY\")], (MAX_TIME, 1))\n",
+    "    y[0:MAX_TIME, 1:2]= np.reshape(fullness_in30[:,index], (MAX_TIME, 1))\n",
+    "    #y[0:MAX_TIME, 3:4]= np.reshape(fullness_in30[:,get_station_id(\"CUSTOM HOUSE QUAY\")], (MAX_TIME, 1))\n",
+    "    y[0:MAX_TIME, 2:3]= np.reshape(fullness_in60[:,index], (MAX_TIME, 1))\n",
+    "    #y[0:MAX_TIME, 5:6]= np.reshape(fullness_in60[:,get_station_id(\"CUSTOM HOUSE QUAY\")], (MAX_TIME, 1))\n",
     "\n",
-    "X= np.full((MAX_TIME, hour_of_day.shape[1] + day_of_week.shape[1] + 4), 0, dtype=np.float)\n",
-    "X[0:MAX_TIME, 0:7]= day_of_week\n",
-    "X[0:MAX_TIME, 7:31]= hour_of_day\n",
-    "X[0:MAX_TIME, 31:32]= fullness_percent[0:MAX_TIME, index:index+1]\n",
-    "X[0:MAX_TIME, 32:33]= bikes_changes_past5[0:MAX_TIME, index:index+1]\n",
-    "X[0:MAX_TIME, 33:34]= bikes_changes_past15[0:MAX_TIME, index:index+1]\n",
-    "X[0:MAX_TIME, 34:35]= bikes_changes_past45[0:MAX_TIME, index:index+1]\n",
+    "    X= np.full((MAX_TIME, hour_of_day.shape[1] + day_of_week.shape[1] + 4 \\\n",
+    "                #* bikes_changes_past5.shape[1] \\\n",
+    "               ), 0, dtype=np.float)\n",
+    "    X[0:MAX_TIME, 0:7]= day_of_week\n",
+    "    X[0:MAX_TIME, 7:31]= hour_of_day\n",
+    "    X[0:MAX_TIME, 31:32]= fullness_percent[0:MAX_TIME, index:index+1]\n",
+    "    X[0:MAX_TIME, 32:33]= bikes_changes_past5[0:MAX_TIME, index:index+1]\n",
+    "    X[0:MAX_TIME, 33:34]= bikes_changes_past15[0:MAX_TIME, index:index+1]\n",
+    "    X[0:MAX_TIME, 34:35]= bikes_changes_past45[0:MAX_TIME, index:index+1]\n",
+    "    # X[0:MAX_TIME, 31:139]= fullness_percent\n",
+    "    # X[0:MAX_TIME, 139:247]= bikes_changes_past5\n",
+    "    # X[0:MAX_TIME, 247:355]= bikes_changes_past15\n",
+    "    # X[0:MAX_TIME, 355:463]= bikes_changes_past45\n",
     "\n",
-    "kf= KFold(n_splits= K)\n",
-    "kf.get_n_splits(X)\n",
-    "score_sum= 0.0\n",
-    "i= 1\n",
-    "for train_index, test_index in kf.split(X):\n",
-    "    X_train, X_test= X[train_index], X[test_index]\n",
-    "    y_train, y_test= y[train_index], y[test_index]\n",
-    "    regr= MLPRegressor(random_state= 1, max_iter= 1000).fit(X_train, y_train)\n",
-    "    y_pred= regr.predict(X_test)\n",
-    "    score_sum+= regr.score(X_test, y_test)\n",
-    "    print(\"Data split \", i, \" accuracy: \", regr.score(X_test, y_test) * 100, \" %\")\n",
-    "    i+= 1\n",
-    "print(\"\\nAverage accuracy of model: \", (score_sum / K) * 100, \" %\")\n",
     "\n",
-    "# regr= MLPRegressor(random_state= 1, max_iter= 500).fit(X_train, y_train)\n",
+    "    kf= KFold(n_splits= K)\n",
+    "    kf.get_n_splits(X)\n",
+    "    score_sum= 0.0\n",
+    "    i= 1\n",
+    "    for train_index, test_index in kf.split(X):\n",
+    "        X_train, X_test= X[train_index], X[test_index]\n",
+    "        y_train, y_test= y[train_index], y[test_index]\n",
+    "        regr= MLPRegressor(random_state= 1, max_iter= 1000).fit(X_train, y_train)\n",
+    "        y_pred= regr.predict(X_test)\n",
+    "        score_sum+= regr.score(X_test, y_test)\n",
+    "        print(\"Data split \", i, \" accuracy: \", regr.score(X_test, y_test) * 100, \" %\")\n",
+    "        i+= 1\n",
+    "    print(\"\\nAverage accuracy of model: \", (score_sum / K) * 100, \" %\")\n",
     "\n",
-    "# scores= cross_val_score(regr, X, y, cv=5)\n",
+    "    # Below is alternative evaluation code\n",
     "\n",
-    "# print(scores)"
+    "    # regr= MLPRegressor(random_state= 1, max_iter= 500).fit(X_train, y_train)\n",
+    "    # scores= cross_val_score(regr, X, y, cv=5)\n",
+    "    # print(scores)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X= np.full((MAX_TIME, 5), -1, dtype=np.float)\n",
+    "X= np.full((MAX_TIME, 2 + 3 * bikes_changes_past5.shape[1]), -1, dtype=np.float)\n",
     "\n",
     "positions= []\n",
     "\n",
@@ -342,33 +349,17 @@
     "    pos_i= (pos_i + 1) % len(positions)\n",
     "\n",
     "index= get_station_id(\"PORTOBELLO ROAD\")\n",
-    "X[0:MAX_TIME, 2:3]= bikes_changes_past5[0:MAX_TIME, index:index + 1]\n",
-    "X[0:MAX_TIME, 3:4]= bikes_changes_past15[0:MAX_TIME, index:index + 1]\n",
-    "X[0:MAX_TIME, 4:5]= fullness_percent[0:MAX_TIME, index:index + 1]\n",
+    "X[0:MAX_TIME, 2:110]= bikes_changes_past5\n",
+    "X[0:MAX_TIME, 110:218]= bikes_changes_past15\n",
+    "X[0:MAX_TIME, 218:326]= fullness_percent\n",
     "\n",
     "y= np.full((MAX_TIME, 3), 0, dtype=np.int)\n",
     "y[0:MAX_TIME, 0:1]= np.reshape(fullness_in10[:,index], (MAX_TIME, 1))\n",
     "y[0:MAX_TIME, 1:2]= np.reshape(fullness_in30[:,index], (MAX_TIME, 1))\n",
     "y[0:MAX_TIME, 2:3]= np.reshape(fullness_in60[:,index], (MAX_TIME, 1))\n",
     "\n",
-    "#print(X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.94888804 0.95045243 0.96736847 0.94180191 0.23107503]\n",
-      "cv_scores mean:0.8079171763199342\n"
-     ]
-    }
-   ],
-   "source": [
+    "#print(X)\n",
+    "\n",
     "neigh= KNeighborsRegressor(n_neighbors= 30, weights='distance')\n",
     "\n",
     "cv_scores= cross_val_score(neigh, X, y, cv=5)\n",
@@ -394,26 +385,6 @@
     "# neigh= KNeighborsRegressor(n_neighbors= 3, weights='uniform').fit(X, y)\n",
     "\n",
     "# print(neigh.predict([[50, 80, 1, 1]]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# dates_per_day= np.zeros((2, len(DAYS_OF_WEEK)), dtype=np.int)\n",
-    "\n",
-    "# station1= stations[get_station_id(\"PORTOBELLO ROAD\")]\n",
-    "# station2= stations[get_station_id(\"CUSTOM HOUSE QUAY\")]\n",
-    "\n",
-    "# for data_day in station1.data_days:\n",
-    "#     dates_per_day[0, data_day.day_of_week]+= 1\n",
-    "# for data_day in station2.data_days:\n",
-    "#     dates_per_day[1, data_day.day_of_week]+= 1\n",
-    "# min_dates_per_day= np.amin(amounts_of_weekdays)\n",
-    "\n",
-    "# X= np.full((DATAPOINTS_PER_DAY, len(DAYS_OF_WEEK) * min_dates_per_day * 2), 0, dtype=np.int)"
    ]
   }
  ],
